# apps/api/src/attachment/attachment.module.ts
@@ -1,0 +1,11 @@
+import { Module } from '@nestjs/common'
+import { AWSModule } from 'aws/aws.module'
+import { AttachmentController } from './attachment.controller'
+import { AttachmentService } from './attachment.service'
+
+@Module({
+    imports: [AWSModule],
+    controllers: [AttachmentController],
+    providers: [AttachmentService],
+})
+export class AttachmentModule {}
