# apps/api/swagger.json
@@ -187,6 +187,39 @@
           "Task"
         ]
       }
+    },
+    "/tasks/{id}/attachments": {
+      "post": {
+        "operationId": "AttachmentController_create",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateAttachmentRequestDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Attachment"
+        ]
+      }
     }
   },
   "info": {
@@ -273,6 +306,17 @@
             "type": "boolean"
           }
         }
+      },
+      "CreateAttachmentRequestDto": {
+        "type": "object",
+        "properties": {
+          "filename": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "filename"
+        ]
       }
     }
   }
